MenuLCD/.metadata/.plugins/org.eclipse.cdt.ui/global-build.log
11:36:51 **** Incremental Build of configuration Debug for project 0-TPORiegoGit ****
make -r all 
Building file: ../src/Primitivas/PR_7Seg.c
Invoking: MCU C Compiler
arm-none-eabi-gcc -DDEBUG -D__CODE_RED -DCORE_M3 -D__LPC17XX__ -D__REDLIB__ -I"E:\Arturo\UTN\2017\Info2\Info2_git\info2\MenuLCD\0-TPORiegoGit\inc" -O0 -fno-common -g3 -Wall -c -fmessage-length=0 -fno-builtin -ffunction-sections -fdata-sections -mcpu=cortex-m3 -mthumb -specs=redlib.specs -MMD -MP -MF"src/Primitivas/PR_7Seg.d" -MT"src/Primitivas/PR_7Seg.o" -MT"src/Primitivas/PR_7Seg.d" -o "src/Primitivas/PR_7Seg.o" "../src/Primitivas/PR_7Seg.c"
../src/Primitivas/PR_7Seg.c:11:17: error: storage class specified for parameter 'uint8_t'
 extern volatile uint8_t msgDisplay[];   //!< Buffer de display
                 ^
../src/Primitivas/PR_7Seg.c:11:25: error: expected ';', ',' or ')' before 'msgDisplay'
 extern volatile uint8_t msgDisplay[];   //!< Buffer de display
                         ^
make: *** [src/Primitivas/PR_7Seg.o] Error 1
